<resources>
    <string name="app_name">Text acumulatiu - 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instruccions">El que s\'escrigui en el camp es mostra en format llista a continuació</string>
    <string name="hint">Entra un valor</string>
    <string name="Resultat">Resultat</string>
    <string name="hintResultat">Aquí apareixerà el resultat</string>
    <string name="esborra">Esborra</string>
</resources>
